1999-04-03 (15:30) Alex Roberts  <bse@gedit.pn.org>
	
	* gE_mdi.c:  (gE_document_create_view) Removed the signal connections
	  that connect doc_insert_text_cb and doc_delete_text_cb.. It seems
	  they were for Undo/Redo, but i'm sure there are easier/better ways
	  to implement this. So there are no more Gtk-CRITCAL errors anymore!
	
1999-04-03 (14:47) Alex Roberts  <bse@gedit.pn.org>
	
	* gE_mdi.c: Commented out the view_menu.. the Add View and Remove
	  View functions are completely borked.. The implementation is
	  completely different to the way GHex implements it.. maybe Jaka
	  could have a look?
	
1999-04-03 (13:16) Alex Roberts  <bse@gedit.pn.org>
	
	* gedit.c: (main) Don't send a GE_DOCUMENT reference to add_view.. 
	  Otherwise we get a Gtk-WARNING on startup...
	
1999-04-03 (00:25) Alex Roberts  <bse@gedit.pn.org>
	
	* commands.[ch]: (auto_indent_cb) Added extra arg to the function, so
	  we dont set the int *pos to 0 by accedent.

1999-04-02 (23:53) Alex Roberts  <bse@gedit.pn.org>

	* gE_mdi.c: (gE_document_create_view) Reactivated the signal connection
	  for "insert_text"... now i just get Gtk-CRITICAL errors from
	  gtk_text_set_point.. maybe its not referencing the TextWidget
	  properly.. even tho the auto indent itself is working.. grr..
	
	* commands.c: (auto_indent_cb) !data->window->auto_indent should be
	  !settings->auto_indent.. turning auto indent off should work now,
	  as soon as i get the rest of auto indent implemented

1999-04-02 (23:40) Alex Roberts  <bse@gedit.pn.org>

	* gE_mdi.c: (gE_add_view) This is pretty much a kludge. Just the same
	  as the old file_open_in_new_win_cb function (commands.c)..

1999-04-02 (23:22) Alex Roberts  <bse@gedit.pn.org>

	* commands.c: (gE_event_button_press) Put the debug output of this
	  function into an #ifdef..

1999-04-02 (23:07) Alex Roberts  <bse@gedit.pn.org>

	* gE_mdi.c: Added replacement to the context popup menu for the text